--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             </div>
             <div class="info">
                 <h2 class="location">
-                    <i class="fa-solid fa-street-view" style="color: orangered">Vadodara, IN</i>
+                    <i class="fa-solid fa-street-view" style="color: orangered">{%location%}, {%country%}</i>
                 </h2>
                 <p id="time">4 Mar | 20:17pm | Wed</p>
-                <h1 class="temp">26.49°C</h1>
-                <h3 class="tempmin_max">Min 22.23°C | Max 29.25°C</h3>
+                <h1 class="temp">{%tempval%}°C</h1>
+                <h3 class="tempmin_max">Min {%tempmin%}°C | Max {%tempmax%}°C</h3>
             </div>
         </div>
         <script>
