--- a/index.html
+++ b/index.html
@@ -10,22 +10,36 @@
     <body>
         <div class="box">
             <div id = "weathericon">
-                <i class="fa-solid fa-sun" style="color: #eccc68"></i>
+                <i class='fa-solid fa-sun' style='color: #eccc68'></i>
             </div>
             <div class="info">
                 <h2 class="location">
                     <i class="fa-solid fa-street-view" style="color: orangered">{%location%}, {%country%}</i>
                 </h2>
                 <p id="time">4 Mar | 20:17pm | Wed</p>
-                <h1 class="temp">{%tempval%}°C</h1>
-                <h3 class="tempmin_max">Min {%tempmin%}°C | Max {%tempmax%}°C</h3>
+                <h1 class="temp">{%tempVal%}°C</h1>
+                <h3 class="tempmin_max">Min {%tempMin%}°C | Max {%tempMax%}°C</h3>
             </div>
         </div>
         <script>
             const currDate = document.getElementById("time");
             let weathericon = document.getElementById("weathericon");
 
-            const tempStatus = "clouds";
+            const tempstatus = "{%tempstatus%}";
+
+            if(tempstatus == "Sunny"){
+                weathericon.innerHTML = "<i class='fa-solid fa-sun' style='color: #eccc68'></i>"
+            }
+            if(tempstatus == "Clouds"){
+                weathericon.innerHTML = "<i class='fa-solid fa-cloud' style='color: #f1f2f6'></i>"
+            }
+            if(tempstatus == "Rainy"){
+                weathericon.innerHTML = "<i class='fa-solid fa-cloud-rain' style='color: #a4b0be'></i>"
+            }
+            else{
+                weathericon.innerHTML = "<i class='fa-solid fa-cloud' style='color: #44c3de'></i>"
+            }
+
             
             const getCurrentDay = ()=>{
                 var weekday = new Array(7);
@@ -78,8 +92,6 @@
                 return `${month} ${date} | ${hours}:${mins} ${periods}`
             }
             currDate.innerHTML = getCurrentTime()+" | "+ getCurrentDay();
-            getCurrentDay();
-            getCurrentTime();
         </script>
     </body>
 </html>
